Revert "fix/navbar components alignment issue"

--- a/src/styles.css
+++ b/src/styles.css
@@ -21,14 +21,7 @@ body {
 }
 
 .nav-links a,
-.nav-links .user-name-text,
-.nav-links .logout-button {
-  display: inline-flex;
-  align-items: center;
-
-  padding: 0;
-  border: none;
-  
+.nav-links button {
   margin-left: 20px;
   text-decoration: none;
   color: #333;
@@ -38,10 +31,6 @@ body {
   font-weight: 500;
 }
 
-.nav-links .logout-button:hover {
-  background-color: #4c6ef5;
-  color: white;
-}
 
 /* 폼 컨테이너 */
 .form-container {
